[tool.poetry]
name = "tea-console"
version = "0.1.0"
description = ""
authors = ["vprusso <vincentrusso1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
tea = { git = "https://github.com/unitaryfund/tea.git", branch = "develop" }
pytz = "^2024.2"
rich = "^13.9.2"
tzlocal = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
